--- a/StackOverflowSurvey2019.ipynb
+++ b/StackOverflowSurvey2019.ipynb
@@ -8,7 +8,7 @@
         "ahfyxVVVDHCE",
         "IEwqPxpCCxDp"
       ],
-      "authorship_tag": "ABX9TyO9nk81FS2hiR1/iEnlvqBv",
+      "authorship_tag": "ABX9TyPMUQr6mxaMzkfdq3G6H3W7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -10401,6 +10401,8 @@
     {
       "cell_type": "code",
       "source": [
+        "# THIS CELL ONLY FOR ADDED KNOWLEDGE; Solution o/p is already above\n",
+        "\n",
         "# Checking the names of the multi-index cols in above o/p\n",
         "# tmp.index.names   # o/p : FrozenList(['Country', 'MainBranch'])\n",
         "\n",
@@ -10408,10 +10410,7 @@
         "# tmp.reset_index(level = 'MainBranch', inplace = True)\n",
         "\n",
         "# Following line will reset 'MainBranch' back as index col\n",
-        "# tmp.set_index('MainBranch', append = True, inplace = True)\n",
-        "\n",
-        "\n",
-        "\n"
+        "# tmp.set_index('MainBranch', append = True, inplace = True)"
       ],
       "metadata": {
         "colab": {
@@ -10736,6 +10735,377 @@
           },
           "metadata": {},
           "execution_count": 80
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Does coding since an early age guarantee higher salary? How about the correlation between coding experience and salary?"
+      ],
+      "metadata": {
+        "id": "jGPRRpI69PrL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Here is how we can compute correlation b/w two cols ( the .corr() works only for numeric cols)\n",
+        "# df['CodingExp'].corr(df['SalaryUSD'])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VzO3sTar9QX_",
+        "outputId": "2a58866f-6d81-4353-fbbf-0dacb939a10f"
+      },
+      "execution_count": 94,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.10507037675399533"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 94
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Computing the correlation among cols 'CodingSinceAge', 'CodingExp', & 'SalaryUSD'\n",
+        "# 1 : perfectly positive correlation (i.e. one variable increases, the other increases)\n",
+        "# 0 : no correction b/w the values\n",
+        "# -1 : perfectly positive correlation (i.e. one variable increases, the other decreases)\n",
+        "\n",
+        "df[['CodingExp', 'CodingSinceAge', 'SalaryUSD']].corr()\n",
+        "# o/p below indicates there is no conclusive ans to our question."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 143
+        },
+        "id": "8wjt4qtYCHPh",
+        "outputId": "b929f593-aea9-4479-c521-17efbae282f1"
+      },
+      "execution_count": 97,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "                CodingExp  CodingSinceAge  SalaryUSD\n",
+              "CodingExp        1.000000       -0.216882   0.105070\n",
+              "CodingSinceAge  -0.216882        1.000000  -0.038528\n",
+              "SalaryUSD        0.105070       -0.038528   1.000000"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-459b9ef3-fe03-4980-b95b-270aaeb45dc1\" class=\"colab-df-container\">\n",
+              "    <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>CodingExp</th>\n",
+              "      <th>CodingSinceAge</th>\n",
+              "      <th>SalaryUSD</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>CodingExp</th>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>-0.216882</td>\n",
+              "      <td>0.105070</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>CodingSinceAge</th>\n",
+              "      <td>-0.216882</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>-0.038528</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>SalaryUSD</th>\n",
+              "      <td>0.105070</td>\n",
+              "      <td>-0.038528</td>\n",
+              "      <td>1.000000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "    <div class=\"colab-df-buttons\">\n",
+              "\n",
+              "  <div class=\"colab-df-container\">\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-459b9ef3-fe03-4980-b95b-270aaeb45dc1')\"\n",
+              "            title=\"Convert this dataframe to an interactive table.\"\n",
+              "            style=\"display:none;\">\n",
+              "\n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\" viewBox=\"0 -960 960 960\">\n",
+              "    <path d=\"M120-120v-720h720v720H120Zm60-500h600v-160H180v160Zm220 220h160v-160H400v160Zm0 220h160v-160H400v160ZM180-400h160v-160H180v160Zm440 0h160v-160H620v160ZM180-180h160v-160H180v160Zm440 0h160v-160H620v160Z\"/>\n",
+              "  </svg>\n",
+              "    </button>\n",
+              "\n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-buttons div {\n",
+              "      margin-bottom: 4px;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "    <script>\n",
+              "      const buttonEl =\n",
+              "        document.querySelector('#df-459b9ef3-fe03-4980-b95b-270aaeb45dc1 button.colab-df-convert');\n",
+              "      buttonEl.style.display =\n",
+              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "      async function convertToInteractive(key) {\n",
+              "        const element = document.querySelector('#df-459b9ef3-fe03-4980-b95b-270aaeb45dc1');\n",
+              "        const dataTable =\n",
+              "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                    [key], {});\n",
+              "        if (!dataTable) return;\n",
+              "\n",
+              "        const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "          '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "          + ' to learn more about interactive tables.';\n",
+              "        element.innerHTML = '';\n",
+              "        dataTable['output_type'] = 'display_data';\n",
+              "        await google.colab.output.renderOutput(dataTable, element);\n",
+              "        const docLink = document.createElement('div');\n",
+              "        docLink.innerHTML = docLinkHtml;\n",
+              "        element.appendChild(docLink);\n",
+              "      }\n",
+              "    </script>\n",
+              "  </div>\n",
+              "\n",
+              "\n",
+              "<div id=\"df-c5134aa5-5b9a-44b8-9b69-68a8ba994fbe\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c5134aa5-5b9a-44b8-9b69-68a8ba994fbe')\"\n",
+              "            title=\"Suggest charts\"\n",
+              "            style=\"display:none;\">\n",
+              "\n",
+              "<svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "     width=\"24px\">\n",
+              "    <g>\n",
+              "        <path d=\"M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z\"/>\n",
+              "    </g>\n",
+              "</svg>\n",
+              "  </button>\n",
+              "\n",
+              "<style>\n",
+              "  .colab-df-quickchart {\n",
+              "      --bg-color: #E8F0FE;\n",
+              "      --fill-color: #1967D2;\n",
+              "      --hover-bg-color: #E2EBFA;\n",
+              "      --hover-fill-color: #174EA6;\n",
+              "      --disabled-fill-color: #AAA;\n",
+              "      --disabled-bg-color: #DDD;\n",
+              "  }\n",
+              "\n",
+              "  [theme=dark] .colab-df-quickchart {\n",
+              "      --bg-color: #3B4455;\n",
+              "      --fill-color: #D2E3FC;\n",
+              "      --hover-bg-color: #434B5C;\n",
+              "      --hover-fill-color: #FFFFFF;\n",
+              "      --disabled-bg-color: #3B4455;\n",
+              "      --disabled-fill-color: #666;\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-quickchart {\n",
+              "    background-color: var(--bg-color);\n",
+              "    border: none;\n",
+              "    border-radius: 50%;\n",
+              "    cursor: pointer;\n",
+              "    display: none;\n",
+              "    fill: var(--fill-color);\n",
+              "    height: 32px;\n",
+              "    padding: 0;\n",
+              "    width: 32px;\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-quickchart:hover {\n",
+              "    background-color: var(--hover-bg-color);\n",
+              "    box-shadow: 0 1px 2px rgba(60, 64, 67, 0.3), 0 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "    fill: var(--button-hover-fill-color);\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-quickchart-complete:disabled,\n",
+              "  .colab-df-quickchart-complete:disabled:hover {\n",
+              "    background-color: var(--disabled-bg-color);\n",
+              "    fill: var(--disabled-fill-color);\n",
+              "    box-shadow: none;\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-spinner {\n",
+              "    border: 2px solid var(--fill-color);\n",
+              "    border-color: transparent;\n",
+              "    border-bottom-color: var(--fill-color);\n",
+              "    animation:\n",
+              "      spin 1s steps(1) infinite;\n",
+              "  }\n",
+              "\n",
+              "  @keyframes spin {\n",
+              "    0% {\n",
+              "      border-color: transparent;\n",
+              "      border-bottom-color: var(--fill-color);\n",
+              "      border-left-color: var(--fill-color);\n",
+              "    }\n",
+              "    20% {\n",
+              "      border-color: transparent;\n",
+              "      border-left-color: var(--fill-color);\n",
+              "      border-top-color: var(--fill-color);\n",
+              "    }\n",
+              "    30% {\n",
+              "      border-color: transparent;\n",
+              "      border-left-color: var(--fill-color);\n",
+              "      border-top-color: var(--fill-color);\n",
+              "      border-right-color: var(--fill-color);\n",
+              "    }\n",
+              "    40% {\n",
+              "      border-color: transparent;\n",
+              "      border-right-color: var(--fill-color);\n",
+              "      border-top-color: var(--fill-color);\n",
+              "    }\n",
+              "    60% {\n",
+              "      border-color: transparent;\n",
+              "      border-right-color: var(--fill-color);\n",
+              "    }\n",
+              "    80% {\n",
+              "      border-color: transparent;\n",
+              "      border-right-color: var(--fill-color);\n",
+              "      border-bottom-color: var(--fill-color);\n",
+              "    }\n",
+              "    90% {\n",
+              "      border-color: transparent;\n",
+              "      border-bottom-color: var(--fill-color);\n",
+              "    }\n",
+              "  }\n",
+              "</style>\n",
+              "\n",
+              "  <script>\n",
+              "    async function quickchart(key) {\n",
+              "      const quickchartButtonEl =\n",
+              "        document.querySelector('#' + key + ' button');\n",
+              "      quickchartButtonEl.disabled = true;  // To prevent multiple clicks.\n",
+              "      quickchartButtonEl.classList.add('colab-df-spinner');\n",
+              "      try {\n",
+              "        const charts = await google.colab.kernel.invokeFunction(\n",
+              "            'suggestCharts', [key], {});\n",
+              "      } catch (error) {\n",
+              "        console.error('Error during call to suggestCharts:', error);\n",
+              "      }\n",
+              "      quickchartButtonEl.classList.remove('colab-df-spinner');\n",
+              "      quickchartButtonEl.classList.add('colab-df-quickchart-complete');\n",
+              "    }\n",
+              "    (() => {\n",
+              "      let quickchartButtonEl =\n",
+              "        document.querySelector('#df-c5134aa5-5b9a-44b8-9b69-68a8ba994fbe button');\n",
+              "      quickchartButtonEl.style.display =\n",
+              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "    })();\n",
+              "  </script>\n",
+              "</div>\n",
+              "\n",
+              "    </div>\n",
+              "  </div>\n"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "dataframe",
+              "summary": "{\n  \"name\": \"df[['CodingExp', 'CodingSinceAge', 'SalaryUSD']]\",\n  \"rows\": 3,\n  \"fields\": [\n    {\n      \"column\": \"CodingExp\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0.6305229776474021,\n        \"min\": -0.2168823855720336,\n        \"max\": 1.0,\n        \"num_unique_values\": 3,\n        \"samples\": [\n          1.0,\n          -0.2168823855720336,\n          0.10507037675399698\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"CodingSinceAge\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0.6571597476497445,\n        \"min\": -0.2168823855720336,\n        \"max\": 1.0,\n        \"num_unique_values\": 3,\n        \"samples\": [\n          -0.2168823855720336,\n          1.0,\n          -0.03852809860461404\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"SalaryUSD\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0.5627403433615225,\n        \"min\": -0.03852809860461404,\n        \"max\": 1.0,\n        \"num_unique_values\": 3,\n        \"samples\": [\n          0.10507037675399698,\n          -0.03852809860461404,\n          1.0\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+            }
+          },
+          "metadata": {},
+          "execution_count": 97
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### How do the education levels of respondents vary across countries?"
+      ],
+      "metadata": {
+        "id": "du1yaDAvElvr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['HighestEdLevel'].sort_values().unique()\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9s-YENSsEaTi",
+        "outputId": "468d3de7-a39f-48f1-d166-f248b8b283a9"
+      },
+      "execution_count": 103,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['Associate Degree', 'Bachelors Degree', 'College/Uni & No Degree',\n",
+              "       'Doctoral Degree', 'Masters Degree', 'No formal education',\n",
+              "       'Primary', 'Professional Degree', 'Secondary', nan], dtype=object)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 103
         }
       ]
     }
