--- a/StackOverflowSurvey2019.ipynb
+++ b/StackOverflowSurvey2019.ipynb
@@ -8,7 +8,7 @@
         "ahfyxVVVDHCE",
         "IEwqPxpCCxDp"
       ],
-      "authorship_tag": "ABX9TyPkeCgU8yEPtSBv2RHO2zCu",
+      "authorship_tag": "ABX9TyPss2RBrcV6NUi1lg5YX9rX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -10839,7 +10839,9 @@
       "cell_type": "code",
       "source": [
         "cntry_grp = df.groupby(['Country'])\n",
-        "df['HighestEdLevel'].sort_values().unique()"
+        "df['HighestEdLevel'].sort_values().unique()\n",
+        "\n",
+        "# TO CODE ..."
       ],
       "metadata": {
         "colab": {
@@ -10861,6 +10863,363 @@
           },
           "metadata": {},
           "execution_count": 114
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### What's the highest salary in countries where average professional coding experience of respondents is between 5 & 10 years?"
+      ],
+      "metadata": {
+        "id": "x_XswvejYYAv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# to code ... (use col 'ProCodingExp')"
+      ],
+      "metadata": {
+        "id": "cmGk_xD6Ykfs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cntry_fltr = df['Country'].value_counts().head(5).index\n",
+        "df_cntry_grp = cntry_grp.mean(['SalaryUSD'])\n",
+        "df_cntry_grp.loc[cntry_fltr]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 237
+        },
+        "id": "g7PkEx8oYv5W",
+        "outputId": "9d408819-7cb7-4e29-cfc5-60f497139ae5"
+      },
+      "execution_count": 120,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "                CodingExp  CodingSinceAge  ProCodingExp      SalaryUSD  \\\n",
+              "Country                                                                  \n",
+              "United States   13.895999       15.015890      8.709486  249552.566088   \n",
+              "India            6.477359       16.637073      3.699308   28057.664916   \n",
+              "Germany         12.722194       14.364428      6.925167  109256.884066   \n",
+              "United Kingdom  14.688570       14.167424      8.883258  166182.499504   \n",
+              "Canada          13.187204       14.877666      8.044727  134018.564909   \n",
+              "\n",
+              "                SelfCompetenceLevel  \n",
+              "Country                              \n",
+              "United States              5.432517  \n",
+              "India                      4.613875  \n",
+              "Germany                    5.030412  \n",
+              "United Kingdom             5.292730  \n",
+              "Canada                     5.065462  "
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-8bea58fb-41f9-410b-a2ac-996295b94044\" class=\"colab-df-container\">\n",
+              "    <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>CodingExp</th>\n",
+              "      <th>CodingSinceAge</th>\n",
+              "      <th>ProCodingExp</th>\n",
+              "      <th>SalaryUSD</th>\n",
+              "      <th>SelfCompetenceLevel</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Country</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>United States</th>\n",
+              "      <td>13.895999</td>\n",
+              "      <td>15.015890</td>\n",
+              "      <td>8.709486</td>\n",
+              "      <td>249552.566088</td>\n",
+              "      <td>5.432517</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>India</th>\n",
+              "      <td>6.477359</td>\n",
+              "      <td>16.637073</td>\n",
+              "      <td>3.699308</td>\n",
+              "      <td>28057.664916</td>\n",
+              "      <td>4.613875</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Germany</th>\n",
+              "      <td>12.722194</td>\n",
+              "      <td>14.364428</td>\n",
+              "      <td>6.925167</td>\n",
+              "      <td>109256.884066</td>\n",
+              "      <td>5.030412</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>United Kingdom</th>\n",
+              "      <td>14.688570</td>\n",
+              "      <td>14.167424</td>\n",
+              "      <td>8.883258</td>\n",
+              "      <td>166182.499504</td>\n",
+              "      <td>5.292730</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Canada</th>\n",
+              "      <td>13.187204</td>\n",
+              "      <td>14.877666</td>\n",
+              "      <td>8.044727</td>\n",
+              "      <td>134018.564909</td>\n",
+              "      <td>5.065462</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "    <div class=\"colab-df-buttons\">\n",
+              "\n",
+              "  <div class=\"colab-df-container\">\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8bea58fb-41f9-410b-a2ac-996295b94044')\"\n",
+              "            title=\"Convert this dataframe to an interactive table.\"\n",
+              "            style=\"display:none;\">\n",
+              "\n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\" viewBox=\"0 -960 960 960\">\n",
+              "    <path d=\"M120-120v-720h720v720H120Zm60-500h600v-160H180v160Zm220 220h160v-160H400v160Zm0 220h160v-160H400v160ZM180-400h160v-160H180v160Zm440 0h160v-160H620v160ZM180-180h160v-160H180v160Zm440 0h160v-160H620v160Z\"/>\n",
+              "  </svg>\n",
+              "    </button>\n",
+              "\n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-buttons div {\n",
+              "      margin-bottom: 4px;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "    <script>\n",
+              "      const buttonEl =\n",
+              "        document.querySelector('#df-8bea58fb-41f9-410b-a2ac-996295b94044 button.colab-df-convert');\n",
+              "      buttonEl.style.display =\n",
+              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "      async function convertToInteractive(key) {\n",
+              "        const element = document.querySelector('#df-8bea58fb-41f9-410b-a2ac-996295b94044');\n",
+              "        const dataTable =\n",
+              "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                    [key], {});\n",
+              "        if (!dataTable) return;\n",
+              "\n",
+              "        const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "          '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "          + ' to learn more about interactive tables.';\n",
+              "        element.innerHTML = '';\n",
+              "        dataTable['output_type'] = 'display_data';\n",
+              "        await google.colab.output.renderOutput(dataTable, element);\n",
+              "        const docLink = document.createElement('div');\n",
+              "        docLink.innerHTML = docLinkHtml;\n",
+              "        element.appendChild(docLink);\n",
+              "      }\n",
+              "    </script>\n",
+              "  </div>\n",
+              "\n",
+              "\n",
+              "<div id=\"df-9ae8bc43-207e-4609-b992-39d6cb457b9d\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-9ae8bc43-207e-4609-b992-39d6cb457b9d')\"\n",
+              "            title=\"Suggest charts\"\n",
+              "            style=\"display:none;\">\n",
+              "\n",
+              "<svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "     width=\"24px\">\n",
+              "    <g>\n",
+              "        <path d=\"M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z\"/>\n",
+              "    </g>\n",
+              "</svg>\n",
+              "  </button>\n",
+              "\n",
+              "<style>\n",
+              "  .colab-df-quickchart {\n",
+              "      --bg-color: #E8F0FE;\n",
+              "      --fill-color: #1967D2;\n",
+              "      --hover-bg-color: #E2EBFA;\n",
+              "      --hover-fill-color: #174EA6;\n",
+              "      --disabled-fill-color: #AAA;\n",
+              "      --disabled-bg-color: #DDD;\n",
+              "  }\n",
+              "\n",
+              "  [theme=dark] .colab-df-quickchart {\n",
+              "      --bg-color: #3B4455;\n",
+              "      --fill-color: #D2E3FC;\n",
+              "      --hover-bg-color: #434B5C;\n",
+              "      --hover-fill-color: #FFFFFF;\n",
+              "      --disabled-bg-color: #3B4455;\n",
+              "      --disabled-fill-color: #666;\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-quickchart {\n",
+              "    background-color: var(--bg-color);\n",
+              "    border: none;\n",
+              "    border-radius: 50%;\n",
+              "    cursor: pointer;\n",
+              "    display: none;\n",
+              "    fill: var(--fill-color);\n",
+              "    height: 32px;\n",
+              "    padding: 0;\n",
+              "    width: 32px;\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-quickchart:hover {\n",
+              "    background-color: var(--hover-bg-color);\n",
+              "    box-shadow: 0 1px 2px rgba(60, 64, 67, 0.3), 0 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "    fill: var(--button-hover-fill-color);\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-quickchart-complete:disabled,\n",
+              "  .colab-df-quickchart-complete:disabled:hover {\n",
+              "    background-color: var(--disabled-bg-color);\n",
+              "    fill: var(--disabled-fill-color);\n",
+              "    box-shadow: none;\n",
+              "  }\n",
+              "\n",
+              "  .colab-df-spinner {\n",
+              "    border: 2px solid var(--fill-color);\n",
+              "    border-color: transparent;\n",
+              "    border-bottom-color: var(--fill-color);\n",
+              "    animation:\n",
+              "      spin 1s steps(1) infinite;\n",
+              "  }\n",
+              "\n",
+              "  @keyframes spin {\n",
+              "    0% {\n",
+              "      border-color: transparent;\n",
+              "      border-bottom-color: var(--fill-color);\n",
+              "      border-left-color: var(--fill-color);\n",
+              "    }\n",
+              "    20% {\n",
+              "      border-color: transparent;\n",
+              "      border-left-color: var(--fill-color);\n",
+              "      border-top-color: var(--fill-color);\n",
+              "    }\n",
+              "    30% {\n",
+              "      border-color: transparent;\n",
+              "      border-left-color: var(--fill-color);\n",
+              "      border-top-color: var(--fill-color);\n",
+              "      border-right-color: var(--fill-color);\n",
+              "    }\n",
+              "    40% {\n",
+              "      border-color: transparent;\n",
+              "      border-right-color: var(--fill-color);\n",
+              "      border-top-color: var(--fill-color);\n",
+              "    }\n",
+              "    60% {\n",
+              "      border-color: transparent;\n",
+              "      border-right-color: var(--fill-color);\n",
+              "    }\n",
+              "    80% {\n",
+              "      border-color: transparent;\n",
+              "      border-right-color: var(--fill-color);\n",
+              "      border-bottom-color: var(--fill-color);\n",
+              "    }\n",
+              "    90% {\n",
+              "      border-color: transparent;\n",
+              "      border-bottom-color: var(--fill-color);\n",
+              "    }\n",
+              "  }\n",
+              "</style>\n",
+              "\n",
+              "  <script>\n",
+              "    async function quickchart(key) {\n",
+              "      const quickchartButtonEl =\n",
+              "        document.querySelector('#' + key + ' button');\n",
+              "      quickchartButtonEl.disabled = true;  // To prevent multiple clicks.\n",
+              "      quickchartButtonEl.classList.add('colab-df-spinner');\n",
+              "      try {\n",
+              "        const charts = await google.colab.kernel.invokeFunction(\n",
+              "            'suggestCharts', [key], {});\n",
+              "      } catch (error) {\n",
+              "        console.error('Error during call to suggestCharts:', error);\n",
+              "      }\n",
+              "      quickchartButtonEl.classList.remove('colab-df-spinner');\n",
+              "      quickchartButtonEl.classList.add('colab-df-quickchart-complete');\n",
+              "    }\n",
+              "    (() => {\n",
+              "      let quickchartButtonEl =\n",
+              "        document.querySelector('#df-9ae8bc43-207e-4609-b992-39d6cb457b9d button');\n",
+              "      quickchartButtonEl.style.display =\n",
+              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "    })();\n",
+              "  </script>\n",
+              "</div>\n",
+              "\n",
+              "    </div>\n",
+              "  </div>\n"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "dataframe",
+              "summary": "{\n  \"name\": \"df_cntry_grp\",\n  \"rows\": 5,\n  \"fields\": [\n    {\n      \"column\": \"Country\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 5,\n        \"samples\": [\n          \"India\",\n          \"Canada\",\n          \"Germany\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"CodingExp\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 3.281200584740871,\n        \"min\": 6.47735891144323,\n        \"max\": 14.688570429919608,\n        \"num_unique_values\": 5,\n        \"samples\": [\n          6.47735891144323,\n          13.187203791469194,\n          12.722193746796515\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"CodingSinceAge\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0.9735990679119885,\n        \"min\": 14.167423977630198,\n        \"max\": 16.63707338835601,\n        \"num_unique_values\": 5,\n        \"samples\": [\n          16.63707338835601,\n          14.877665876777252,\n          14.364428498206049\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"ProCodingExp\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 2.1296783699075905,\n        \"min\": 3.699308498773143,\n        \"max\": 8.88325760223698,\n        \"num_unique_values\": 5,\n        \"samples\": [\n          3.699308498773143,\n          8.04472748815166,\n          6.92516658124039\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"SalaryUSD\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 80879.30011367408,\n        \"min\": 28057.664916229056,\n        \"max\": 249552.56608811748,\n        \"num_unique_values\": 5,\n        \"samples\": [\n          28057.664916229056,\n          134018.56490917146,\n          109256.8840656432\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"SelfCompetenceLevel\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 0.31193754847000593,\n        \"min\": 4.613874637519518,\n        \"max\": 5.432516511917297,\n        \"num_unique_values\": 5,\n        \"samples\": [\n          4.613874637519518,\n          5.065462085308057,\n          5.0304117546557325\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+            }
+          },
+          "metadata": {},
+          "execution_count": 120
         }
       ]
     }
